<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FF005588" 
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#FF0066AA" 
    >
    
	<Button android:id="@+id/button_a" 
		android:text="@string/btn_a_txt" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:enabled="false" 
    	android:textColor="@android:color/white"
		/>

	<Button android:id="@+id/button_b" 
		android:text="@string/btn_b_txt" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:enabled="true" 
    	android:textColor="@android:color/white"
		/>
	
    </LinearLayout>
    
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	android:gravity="center_vertical"
    android:background="#FF000066" 
    >
        

	<Button android:id="@+id/button_1" 
		android:text="@string/btn_1_txt" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:enabled="false" 
		style="@style/ButtonNormalTextWithIcon" />
	
    <Button android:id="@+id/button_2" 
		android:text="@string/btn_2_txt" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:enabled="true" 
		style="@style/ButtonNormalTextWithIcon" />
  
	<Button android:id="@+id/button_3" 
		android:text="@string/btn_3_txt" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:enabled="false" 
		style="@style/ButtonNormalTextWithIconBlue" />
	
    <Button android:id="@+id/button_4" 
		android:text="@string/btn_4_txt" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:enabled="true" 
		style="@style/ButtonNormalTextWithIconBlue" />
    
    </LinearLayout>  
</LinearLayout>